Fix footer being hidden on mobile devices

--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
   padding: 0;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   background-color: #1f2937;
   display: flex;
@@ -13,7 +17,7 @@ body {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   color: #f9faf8;
-  min-height: 100vh;
+  min-height: 100%;
 }
 
 header,
@@ -33,6 +37,7 @@ footer {
 
 footer {
   margin-top: auto;
+  text-align: center;
 }
 
 main {
